Change css file

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lesson - 13 project</title>
     <link rel="stylesheet" href="./main/style.css">
-    <link rel="stylesheet" href="./././4 - lesson practice MARK CHAT 2/index.html">
+    <link rel="stylesheet" href="./4 - lesson practice MARK CHAT 2/index.html">
 </head>
 
 <body>
@@ -300,7 +300,7 @@
                         <!-- Chat button -->
                         <div class="img">
                             <button>
-                                <a href="./4 - lesson practice MARK CHAT 2/index.html">
+                                <a href="https://contactwithzuckerbergpage.netlify.app">
                                     <img src="././images/Chat icon.svg" alt="Chat icon">
                                 </a>
                             </button>
